--- a/jaccard-index.js.html
+++ b/jaccard-index.js.html
@@ -33,6 +33,12 @@ var promisen = require("promisen");
 module.exports = Jaccard;
 
 /**
+ * @private
+ */
+
+var _SEP = "\x00";
+
+/**
  * Promise-based Jaccard similarity coefficient index matrix calculation framework
  *
  * @param [options] {Object}
@@ -55,24 +61,24 @@ module.exports = Jaccard;
  *   getLog: getLog
  * };
  *
- * Jaccard(options).getMatrix(items).then(showResult).catch(console.warn);
+ * Jaccard(options).getLinks(items).then(showResult).catch(console.warn);
  *
  * function getLog(itemId) {
  *   return Promise.resolve(logs[itemId]); // async
  *   // return logs[itemId]; // sync
  * }
  *
- * function showResult(matrix) {
- *   console.log(JSON.stringify(matrix, null, 2));
+ * function showResult(links) {
+ *   console.log(JSON.stringify(links, null, 2));
  *   process.exit(0);
  * }
  *
  * // Result:
- * // {
- * //   "item1": {"item2": 0.25, "item3": 0.6666666666666666},
- * //   "item2": {"item1": 0.25, "item3": 0.2},
- * //   "item3": {"item1": 0.6666666666666666, "item2": 0.2}
- * // }
+ * // [
+ * //   {"source": "item1", "target": "item2", "value": 0.25},
+ * //   {"source": "item1", "target": "item3", "value": 0.6666666666666666},
+ * //   {"source": "item2", "target": "item3", "value": 0.2}
+ * // ]
  */
 
 function Jaccard(options) {
@@ -245,44 +251,43 @@ function _getItems() {
 }
 
 /**
- * returns a matrix of Jaccard index for items given.
+ * returns an Array of Jaccard index of each links.
  *
  * @param [sourceItems] {Array|Promise.&lt;Array>} array of source items
  * @param [targetItems] {Array|Promise.&lt;Array>} array of target items
- * @param [stream] {WritableStream} stream to write links
- * @returns {Promise.&lt;Object>}
+ * @param [onLink] {Function} function(index, sourceItem, targetItem) {...}
+ * @returns {Promise.&lt;Array>}
  */
 
-Jaccard.prototype.getMatrix = function(sourceItems, targetItems, stream) {
+Jaccard.prototype.getLinks = function(sourceItems, targetItems, onLink) {
   var that = this;
-  var matrix = {};
-  var wait = that.wait &amp;&amp; promisen.wait(that.wait);
+  var links;
+  var check = {};
+  var wait = (that.wait != null) &amp;&amp; promisen.wait(that.wait);
   var hasFilter = (that.filter !== through);
-  var hasStream = stream &amp;&amp; !!stream.write;
   var noDirection = !that.direction;
-  if (!sourceItems) sourceItems = this.getItems;
+  if (!sourceItems) sourceItems = that.getItems;
   if (!targetItems) targetItems = sourceItems;
+  if (!onLink) onLink = _onLink;
 
   return promisen.eachSeries(sourceItems, sourceIt).call(that).then(done);
 
   function sourceIt(sourceItem) {
-    var row = matrix[sourceItem] || (matrix[sourceItem] = {});
     return promisen.eachSeries(targetItems, targetIt).call(that);
 
     function targetIt(targetItem) {
       if (sourceItem === targetItem) return;
 
-      var swap = noDirection &amp;&amp; (targetItem &lt; sourceItem);
-      var job;
-      if (swap) {
-        job = that.cachedIndex(targetItem, sourceItem); // swapped
-      } else {
-        job = that.cachedIndex(sourceItem, targetItem);
+      if (noDirection) {
+        var asc = sourceItem + _SEP + targetItem;
+        var desc = targetItem + _SEP + sourceItem;
+        if (check[asc] || check[desc]) return;
+        check[asc] = check[desc] = 1;
       }
 
+      var job = that.cachedIndex(sourceItem, targetItem);
       if (hasFilter) job = job.then(filter);
-
-      return job.then(then);
+      return job.then(then).then(wait);
 
       function filter(index) {
         if (index == null) return;
@@ -291,16 +296,18 @@ Jaccard.prototype.getMatrix = function(sourceItems, targetItems, stream) {
 
       function then(index) {
         if (index == null) return;
-        if (!hasStream) row[targetItem] = index;
-        if (hasStream &amp;&amp; !swap) stream.write(index);
-        return wait &amp;&amp; wait();
+        return onLink.call(that, index, sourceItem, targetItem);
       }
     }
   }
 
+  function _onLink(index, sourceItem, targetItem) {
+    if (!links) links = [];
+    links.push({source: sourceItem, target: targetItem, value: index});
+  }
+
   function done() {
-    if (hasStream &amp;&amp; !!stream.end &amp;&amp; !stream._isStdio) stream.end();
-    return hasStream ? stream : matrix;
+    return links;
   }
 };
 
@@ -394,7 +401,7 @@ Jaccard.prototype.index = function(sourceLog, targetLog) {
  *
  * @method
  * @param index {number} Jaccard index
- * @returns {number|Object}
+ * @returns {number|Object|null}
  * @example
  * jaccard.filter = function(index) {
  *   return Math.filter(index * 1000) / 1000;
